# parserJson

./: Makefile  Readme.txt  main.c  test.json  test.out
includes/: to_json.h
libft/includes/: get_next_line.h
libft/src/: ft_atof.c  ft_range.c
src/: CMakeLists.txt  check_value.c  creation_token_list.c  ft_error.c  ft_is_smth.c  ft_print.c  ft_return.c  get_smth.c  get_smth2.c  helps.c  make_smth.c  parse_json.c  parser.c  realloc_key_value.c  tree.c
test.out.dSYM/Contents/Resources/DWARF/: test.out
